force-app/main/default/objects/Account/fields/B2B_AccountMessage__c.field-meta.xml
<CustomField>
    <fullName>B2B_AccountMessage__c</fullName>
    <description>Field used for saving the partner message on the account level.</description>
    <label>Account Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>