force-app/main/default/objects/Account/fields/B2B_Blocked_for_Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>B2B_Blocked_for_Partner_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >This field is synced from the CSS flag “NOPPACCESS”, that is maintained by centrally by HQ. If the checkbox is marked, the account is blocked from access to the Partner Portal and the registration fails.</description>
    <inlineHelpText
    >This field is synced from the CSS flag “NOPPACCESS”, that is maintained by centrally by HQ. If the checkbox is marked, the account is blocked from access to the Partner Portal and the registration fails.</inlineHelpText>
    <label>Blocked for Partner Portal</label>
    <type>Checkbox</type>
</CustomField>