force-app/main/default/objects/Account/fields/B2B_Customer_Service_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Service_Telephone_Number__c</fullName>
    <description>This field store the phone number of the customer service based on the account country.</description>
    <label>B2B Customer Service Telephone Number</label>
    <type>Phone</type>
</CustomField>