force-app/main/default/objects/Account/fields/B2B_Enabled_As_Buyer__c.field-meta.xml
<CustomField>
    <fullName>B2B_Enabled_As_Buyer__c</fullName>
    <description>This field indicates whether the account is enabled as buyer account</description>
    <label>Enabled As Buyer</label>
    <summaryForeignKey>BuyerAccount.BuyerId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>