force-app/main/default/objects/Account/fields/B2B_Hide_Prices__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hide_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show or hide product prices</label>
    <type>Checkbox</type>
</CustomField>