force-app/main/default/objects/Account/fields/B2B_Hide_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hide_Purchase_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field hides purchase prices from the whole portal, set True to hide</description>
    <label>B2B_Hide_Purchase_Price</label>
    <type>Checkbox</type>
</CustomField>