force-app/main/default/objects/Account/fields/B2B_Is_Not_Buyer_Portal_Enabled_User__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Not_Buyer_Portal_Enabled_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has value as true when the portal user is created and the Account doesn&apos;t have buyer access.</description>
    <label>Is Not Buyer Portal Enabled User</label>
    <type>Checkbox</type>
</CustomField>