force-app/main/default/objects/Account/fields/B2B_Neubau_Account__c.field-meta.xml
<CustomField>
    <fullName>B2B_Neubau_Account__c</fullName>
    <description>This field is used by B2B application to determine if the ARIS Account ID contains NB</description>
    <formula>CONTAINS(k_ARIS_Account_ID__c,&apos;NB&apos;)</formula>
    <label>Neubau Account</label>
    <type>Checkbox</type>
</CustomField>