force-app/main/default/objects/Account/fields/B2B_No_Invoice_Request__c.field-meta.xml
<CustomField>
    <fullName>B2B_No_Invoice_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Yes/active = Request of invoices in partner portal is not allowed for this account.</inlineHelpText>
    <label>CCS Flag NOINVOICE</label>
    <type>Checkbox</type>
</CustomField>