force-app/main/default/objects/Account/fields/B2B_Requested_Address_Change__c.field-meta.xml
<CustomField>
    <fullName>B2B_Requested_Address_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the Account for a current address change request.</description>
    <label>B2B Requested Address Change</label>
    <type>Checkbox</type>
</CustomField>