force-app/main/default/objects/Account/fields/B2B_SH_EE_Customer_Service_Agent__c.field-meta.xml
<CustomField>
    <fullName>B2B_SH_EE_Customer_Service_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Responsible person to handle Customer Service requests coming from the B2B Commerce</inlineHelpText>
    <label>SH/EE Customer Service Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>