force-app/main/default/objects/Account/fields/B2B_Sonnenverglasung__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sonnenverglasung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sonnenverglasung</label>
    <type>Checkbox</type>
</CustomField>