force-app/main/default/objects/Account/fields/B2B_Subsegments_Empty__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subsegments_Empty__c</fullName>
    <description>This field is used by the B2B application to determine if any of the subsegments are empty</description>
    <formula>ISBLANK( CSG_SubSeg_EE__c )  &amp;&amp;  ISBLANK( SH_Subsegment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsegments Empty</label>
    <type>Checkbox</type>
</CustomField>