force-app/main/default/objects/Account/fields/B2B_SVS_Customer_Service_Agent__c.field-meta.xml
<CustomField>
    <fullName>B2B_SVS_Customer_Service_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible person to handle Customer Service requests for SVS (100%, ee RX) coming from the Partner Portal.</description>
    <inlineHelpText>Responsible person to handle Customer Service requests for SVS (100%, ee RX) coming from the Partner Portal.</inlineHelpText>
    <label>SVS Customer Service Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SVS_Customer_Service_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>