force-app/main/default/objects/Account/fields/B2B_Vision_Sensation__c.field-meta.xml
<CustomField>
    <fullName>B2B_Vision_Sensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vision Sensation</label>
    <type>Checkbox</type>
</CustomField>