force-app/main/default/objects/Account/fields/B2B_With_RX__c.field-meta.xml
<CustomField>
    <fullName>B2B_With_RX__c</fullName>
    <description>This field is used to show the RX status of the account on the Account Detail page of the store.</description>
    <formula>ISPICKVAL ( k_EERX_Account_Status__c , &apos;1&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>With RX</label>
    <type>Checkbox</type>
</CustomField>