force-app/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description
    >Used for visibility of the footer in SH brand’s Partner Portal &amp; used for populating customer service details on B2B Prospect Accounts.</description>
    <inlineHelpText
    >Used for visibility of the footer in SH brand’s Partner Portal &amp; used for populating customer service details on B2B Prospect Accounts.</inlineHelpText>
    <label>Brand for Partner Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BrandValueSet</valueSetName>
    </valueSet>
</CustomField>