force-app/main/default/objects/Account/fields/k_Has_RX__c.field-meta.xml
<CustomField>
    <fullName>k_Has_RX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Relevant to label to validate RX accounts</description>
    <label>With RX</label>
    <type>Checkbox</type>
</CustomField>