force-app/main/default/objects/Account/fields/k_Stage__c.field-meta.xml
<CustomField>
    <fullName>k_Stage__c</fullName>
    <inlineHelpText>Based on the development of the customer relationship</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Prospect_B2B</fullName>
                <label>Prospect from Partner Portal</label>
            </value>
            <value>
                <fullName>Identity User - Mediahub only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>