force-app/main/default/objects/Account/fields/Monthly_Billing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Billing__c</fullName>
    <label>Monthly Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>