force-app/main/default/objects/Account/fields/POS_Address_retailer_search__c.field-meta.xml
<CustomField>
    <fullName>POS_Address_retailer_search__c</fullName>
    <description>Custom address field that displays the POS address in the B2B storefront to the commerce user</description>
    <label>POS Address (retailer search)</label>
    <type>Address</type>
</CustomField>