force-app/main/default/objects/Account/fields/Store_Country__c.field-meta.xml
<CustomField>
    <fullName>Store_Country__c</fullName>
    <description>Country code based on AE&apos;s Location</description>
    <inlineHelpText>Show country options as picklist values in a dropdown in the country field for e.g. Get Access flow</inlineHelpText>
    <label>Store Country (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Germany-MITTE</fullName>
                <isActive>false</isActive>
                <label>Germany-MITTE</label>
            </value>
            <value>
                <fullName>Germany-NORD</fullName>
                <isActive>false</isActive>
                <label>Germany-NORD</label>
            </value>
            <value>
                <fullName>Germany-SUD</fullName>
                <isActive>false</isActive>
                <label>Germany-SUD</label>
            </value>
            <value>
                <fullName>Great Britain</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>HongKong</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>Iceland</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Lithuania</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
                <isActive>false</isActive>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>