force-app/main/default/objects/Account/recordTypes/k_Account.recordType-meta.xml
<RecordType>
    <fullName>k_Account</fullName>
    <active>true</active>
    <description>Approved customer account</description>
    <label>Account</label>
</RecordType>