force-app/main/default/objects/Account/recordTypes/k_Prospect.recordType-meta.xml
<RecordType>
    <fullName>k_Prospect</fullName>
    <active>true</active>
    <description>Lead</description>
    <label>Prospect</label>
</RecordType>